--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	</style>
 </head>
 <body>
-	<script src="Body.js"></script>    
-	<script src="Planet.js"></script>    
-	<script src="main.js"></script>    
+	<script src="src/Body.js"></script>    
+	<script src="src/Planet.js"></script>    
+	<script src="src/main.js"></script>    
 </body>
 </html>
