--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
 	<script src="src/Body.js"></script>
 	<script src="src/Planet.js"></script>
+	<script src="src/dom-ui.js"></script>
 	<script src="src/ui.js"></script>
 	<script src="src/main.js"></script>
 </body>
